# DDD_Framework_sample

./: .gitignore
django/: pyproject.toml
django/.3.7.3/: pyvenv.cfg
django/project/project/: settings.py
