[tool.poetry]
name = "django-ddd-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"
orator = "^0.9.8"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
autopep8 = "^1.4"
django-debug-toolbar = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
